CrashTracer: com.apple.WebKit.Networking at JavaScriptCore: WTF::String::isolatedCopy const & https://bugs.webkit.org/show_bug.cgi?id=146236 rdar://problem/21380700

Reviewed by Andreas Kling.

* NetworkProcess/cache/NetworkCache.cpp:
(WebKit::NetworkCache::Cache::clear):

    Don't crash if this is called with network cache disabled.


Canonical link: https://commits.webkit.org/164321@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185882 268f45cc-cd09-0410-ab3c-d52691b4dbfc